--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<h2>This is my html2 homepage</h2>
+<html lang="en">
+  <head>
+    <title>HTML and CSS Authoring 1</title>
+  </head>
+
+  <body>
+    <h1>HTML and CSS Authoring 1</h1>
+    <h3>Kjrsten Holt</h3>
+    <h3>Spring Semester 2025</h3>
+
+    <ul>
+      <li><a href="cat-photos/index.html">Cat Photos App</a></li>
+    </ul>
+    
+  </body>
+</html>
+
