Update author and semester information in index.html

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
 
   <body>
     <h1>HTML and CSS Authoring 1</h1>
-    <h3>Kjrsten Holt</h3>
-    <h3>Spring Semester 2025</h3>
+    <h3>Stewart Nelson</h3>
+    <h3>Fall Semester 2025</h3>
 
     <ul>
       <li><a href="cat-photos/index.html">Cat Photos App</a></li>
+      <li><a href="tribute-page/index.html">Tribute page</a></li>
     </ul>
     
   </body>
